Внес изменение №1 в задание